// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ContentOpenWith/ContentOpenWith render() should render the Open With button 1`] = `
<Internationalize>
  <div
    className="be bcow"
    id="bcow_9"
  >
    <OpenWithButton
      displayIntegration="Adobe"
      error={null}
      isLoading={false}
      onClick={[Function]}
    />
  </div>
</Internationalize>
`;

exports[`components/ContentOpenWith/ContentOpenWith render() should render the loading button when loading 1`] = `
<Internationalize>
  <div
    className="be bcow"
    id="bcow_8"
  >
    <OpenWithButton
      displayIntegration={null}
      error={null}
      isLoading={true}
      onClick={[Function]}
    />
  </div>
</Internationalize>
`;
